--- a/blog.html
+++ b/blog.html
@@ -257,8 +257,8 @@
 												</div>
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
+														<li><a href="https://medium.com/@deryagumustel" class="button large">Medium</a></li>
+														<li><a href="portfolio.html" class="button alt large">Portfolio</a></li>
 													</ul>
 												</div>
 											</div>
@@ -277,7 +277,7 @@
 							<div class="col-12">
 
 								<!-- About -->
-									<section>
+									<!-- <section>
 										<h2 class="major"><span>What's this about?</span></h2>
 										<p>
 											This is <strong>TXT</strong>, yet another free responsive site template designed by
@@ -286,7 +286,7 @@
 											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
 											That's basically it :)
 										</p>
-									</section>
+									</section> -->
 
 							</div>
 							<div class="col-12">
