--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
 												</div>
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="portfolio.html" class="button large">See Portfolio</a></li>
-														<li><a href="blog.html" class="button large">Read Blog</a></li>
+														<li><a href="portfolio.html" class="button large">Portfolio</a></li>
+														<li><a href="blog.html" class="button large">Blog</a></li>
 													</ul>
 												</div>
 											</div>
@@ -278,7 +278,7 @@
 							<div class="col-12">
 
 								<!-- About -->
-									<section>
+									<!-- <section>
 										<h2 class="major"><span>What's this about?</span></h2>
 										<p>
 											This is <strong>TXT</strong>, yet another free responsive site template designed by
@@ -287,7 +287,7 @@
 											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
 											That's basically it :)
 										</p>
-									</section>
+									</section> -->
 
 							</div>
 							<div class="col-12">
