--- a/portfolio.html
+++ b/portfolio.html
@@ -173,16 +173,16 @@
 															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 															<h3><a href="#">Data Analysis</a></h3>
 															<p>
-																Analysis and visualization of Clivar & Carbon Hydrographic Data 
-																Office Bermuda Atlantic Time Series (CCHDO BATS) data.
+																Web scraping, analysis, and visualization of oceanographic data 
+																collected by the long-term Bermuda Atlantic Time Series Study.
 															</p>
 														</section>
 
 												</div>
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
+														<li><a href="https://github.com/dgumustel" class="button large">GitHub</a></li>
+														<li><a href="blog.html" class="button alt large">Blog</a></li>
 													</ul>
 												</div>
 											</div>
@@ -201,7 +201,7 @@
 							<div class="col-12">
 
 								<!-- About -->
-									<section>
+									<!-- <section>
 										<h2 class="major"><span>What's this about?</span></h2>
 										<p>
 											This is <strong>TXT</strong>, yet another free responsive site template designed by
@@ -210,7 +210,7 @@
 											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
 											That's basically it :)
 										</p>
-									</section>
+									</section> -->
 
 							</div>
 							<div class="col-12">
