--- a/fun.html
+++ b/fun.html
@@ -201,7 +201,7 @@
 							<div class="col-12">
 
 								<!-- About -->
-									<section>
+									<!-- <section>
 										<h2 class="major"><span>What's this about?</span></h2>
 										<p>
 											This is <strong>TXT</strong>, yet another free responsive site template designed by
@@ -210,7 +210,7 @@
 											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
 											That's basically it :)
 										</p>
-									</section>
+									</section> -->
 
 							</div>
 							<div class="col-12">
