--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 				<footer id="footer">
 					<div class="container">
 						<div class="row gtr-200">
-							<div class="col-12">
+							<!-- <div class="col-12"> -->
 
 								<!-- About -->
 									<!-- <section>
@@ -289,7 +289,7 @@
 										</p>
 									</section> -->
 
-							</div>
+							<!-- </div> -->
 							<div class="col-12">
 
 								<!-- Contact -->
