Add TODO's to index

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 											<p>And some text that attempts to explain their significance</p> -->
 										</header>
 										<p>
-											Put a blurb about myself here <br />
+											TODO: Put a blurb about myself here <br />
 											
 										</p>
 									</section>
@@ -295,6 +295,10 @@
 								<!-- Contact -->
 									<section>
 										<h2 class="major"><span>Get in touch</span></h2>
+										<p>
+											TODO: Put a blurb here about how to get in touch with me if folks are interested in working with me or 
+											have opportunities they want to share.
+										</p>
 										<ul class="contact">
 											<!-- <li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
 											<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
