Remove div, add TODO bottom of all pages

--- a/blog.html
+++ b/blog.html
@@ -274,7 +274,7 @@
 				<footer id="footer">
 					<div class="container">
 						<div class="row gtr-200">
-							<div class="col-12">
+							<!-- <div class="col-12"> -->
 
 								<!-- About -->
 									<!-- <section>
@@ -288,12 +288,16 @@
 										</p>
 									</section> -->
 
-							</div>
+							<!-- </div> -->
 							<div class="col-12">
 
 								<!-- Contact -->
 									<section>
 										<h2 class="major"><span>Get in touch</span></h2>
+										<p>
+											TODO: Put a blurb here about how to get in touch with me if folks are interested in working with me or 
+											have opportunities they want to share.
+										</p>
 										<ul class="contact">
 											<!-- <li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
 											<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
