Add TODO to blog page

--- a/blog.html
+++ b/blog.html
@@ -259,6 +259,7 @@
 													<ul class="actions">
 														<li><a href="https://medium.com/@deryagumustel" class="button large">Medium</a></li>
 														<li><a href="portfolio.html" class="button alt large">Portfolio</a></li>
+														<!-- TODO: Change color of button alt large to light green -->
 													</ul>
 												</div>
 											</div>
