--- a/portfolio/predmodeling.html
+++ b/portfolio/predmodeling.html
@@ -18,8 +18,8 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="#" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<h1><a href="../portfolio.html" id="logo">Portfolio</a></h1>
+							<p>Projects In Data Science and Oceanography</p>
 						</div>
 					</div>
 				</header>
