Update featured projects section on all portfolio pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -131,8 +131,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">Predictive Modeling</a></h3>
+															<a href="portfolio/predmodeling.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+															<h3><a href="portfolio/predmodeling.html">Predictive Modeling</a></h3>
 															<p>
 																Classifying coastal upwelling with machine learning models
 																using water column temperature in Oregon, WA.
@@ -144,8 +144,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Computer Vision</a></h3>
+															<a href="portfolio/compvision.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+															<h3><a href="portfolio/compvision.html">Computer Vision</a></h3>
 															<p>
 																Training computer vision models to recognize face masks 
 																in the pandemic.
@@ -157,8 +157,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">Natural Language Processing</a></h3>
+															<a href="portfolio/nlp.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<h3><a href="portfolio/nlp.html">Natural Language Processing</a></h3>
 															<p>
 																Sentiment analysis and classification of Reddit posts using 
 																NLP packages in Python.
@@ -170,8 +170,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">Data Analysis</a></h3>
+															<a href="portfolio/analysis.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+															<h3><a href="portfolio/analysis.html">Data Analysis</a></h3>
 															<p>
 																Web scraping, analysis, and visualization of oceanographic data 
 																collected by the long-term Bermuda Atlantic Time Series Study.
