--- a/portfolio/analysis.html
+++ b/portfolio/analysis.html
@@ -124,18 +124,19 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
+										<h2 class="major"><span>More Projects</span></h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
+															<a href="../portfolio.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+															<h3><a href="../portfolio.html">Time-Series Decomposition</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Using dimensionality reduction methods to find seasonal 
+																patterns in time-series water column data from the Northern 
+																California Current system. 
 															</p>
 														</section>
 
@@ -144,11 +145,11 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
+															<a href="predmodeling.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+															<h3><a href="predmodeling.html">Predictive Modeling</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Classifying coastal upwelling with machine learning models
+																using water column temperature in Oregon, WA.
 															</p>
 														</section>
 
@@ -157,11 +158,11 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
+															<a href="compvision.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<h3><a href="compvision.html">Computer Vision</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Training computer vision models to recognize face masks 
+																in the pandemic.
 															</p>
 														</section>
 
@@ -170,19 +171,18 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
+															<a href="nlp.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<h3><a href="nlp.html">Natural Language Processing</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Sentiment analysis and classification of Reddit posts using 
+																NLP packages in Python.
 															</p>
 														</section>
-
-												</div>
+														
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
+														<li><a href="https://github.com/dgumustel" class="button large">GitHub</a></li>
+														<li><a href="../blog.html" class="button alt large">Blog</a></li>
 													</ul>
 												</div>
 											</div>
