Add missing </div> to analysis, nlp subpages

--- a/portfolio/analysis.html
+++ b/portfolio/analysis.html
@@ -179,6 +179,7 @@
 															</p>
 														</section>
 														
+												</div>
 												<div class="col-12">
 													<ul class="actions">
 														<li><a href="https://github.com/dgumustel" class="button large">GitHub</a></li>
