Update headers, subheaders of portfolio subpages

--- a/portfolio/analysis.html
+++ b/portfolio/analysis.html
@@ -62,8 +62,8 @@
 										<article class="box page-content">
 
 											<header>
-												<h2>No Sidebar</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+												<h2>Oceanographic Data Analysis</h2>
+												<p>Analysis and visualization of oceanographic data collected by the long-term Bermuda Atlantic Time Series Study (BATS).</p>
 												<ul class="meta">
 													<li class="icon fa-clock">5 days ago</li>
 													<li class="icon fa-comments"><a href="#">1,024</a></li>
@@ -178,7 +178,7 @@
 																NLP packages in Python.
 															</p>
 														</section>
-														
+
 												</div>
 												<div class="col-12">
 													<ul class="actions">
