--- a/portfolio/compvision.html
+++ b/portfolio/compvision.html
@@ -62,11 +62,11 @@
 										<article class="box page-content">
 
 											<header>
-												<h2>No Sidebar</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+												<h2>Computer Vision</h2>
+												<p>Face Mask Detection: Multiclass Classification using Convolutional Neural Networks (CNN)</p>
 												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
+													<li class="icon fa-clock">April 2021</li>
+													<!-- <li class="icon fa-comments"><a href="#">1,024</a></li> -->
 												</ul>
 											</header>
 
