--- a/portfolio/nlp.html
+++ b/portfolio/nlp.html
@@ -62,8 +62,8 @@
 										<article class="box page-content">
 
 											<header>
-												<h2>No Sidebar</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+												<h2>Natural Language Processing (NLP)</h2>
+												<p>Natural Language Processing and Predictive Classification Models - The Reddit Project</p>
 												<ul class="meta">
 													<li class="icon fa-clock">5 days ago</li>
 													<li class="icon fa-comments"><a href="#">1,024</a></li>
