Remove comment #'s, update dates on portfolio subpages

--- a/portfolio/analysis.html
+++ b/portfolio/analysis.html
@@ -65,8 +65,8 @@
 												<h2>Oceanographic Data Analysis</h2>
 												<p>Analysis and visualization of oceanographic data collected by the long-term Bermuda Atlantic Time Series Study (BATS).</p>
 												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
+													<li class="icon fa-clock">May - June 2020</li>
+													<!-- <li class="icon fa-comments"><a href="#">1,024</a></li> -->
 												</ul>
 											</header>
 
