--- a/portfolio/nlp.html
+++ b/portfolio/nlp.html
@@ -65,8 +65,8 @@
 												<h2>Natural Language Processing (NLP)</h2>
 												<p>Natural Language Processing and Predictive Classification Models - The Reddit Project</p>
 												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
+													<li class="icon fa-clock">March - April 2021</li>
+													<!-- <li class="icon fa-comments"><a href="#">1,024</a></li> -->
 												</ul>
 											</header>
 
