--- a/portfolio/predmodeling.html
+++ b/portfolio/predmodeling.html
@@ -65,8 +65,8 @@
 												<h2>Predictive Modeling</h2>
 												<p>Classifying periods of coastal upwelling from environmental variables in Oregon</p>
 												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
+													<li class="icon fa-clock">April - June 2021</li>
+													<!-- <li class="icon fa-comments"><a href="#">1,024</a></li> -->
 												</ul>
 											</header>
 
