Minor text edit on portfolio/analysis

--- a/portfolio/analysis.html
+++ b/portfolio/analysis.html
@@ -63,7 +63,7 @@
 
 											<header>
 												<h2>Oceanographic Data Analysis</h2>
-												<p>Analysis and visualization of oceanographic data collected by the long-term Bermuda Atlantic Time Series Study (BATS).</p>
+												<p>Analysis and visualization of oceanographic data collected by the long-term Bermuda Atlantic Time Series Study (BATS)</p>
 												<ul class="meta">
 													<li class="icon fa-clock">May - June 2020</li>
 													<!-- <li class="icon fa-comments"><a href="#">1,024</a></li> -->
