Update logo headers on funstuff subpages

--- a/funstuff/fungraphs.html
+++ b/funstuff/fungraphs.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Fun Graphs</title>
+		<title>Fun Failed Graphs</title>
+		<!-- TODO: Change menu nav on all pages to fun failed graphs? -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -18,8 +19,8 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<h1><a href="index.html" id="logo">Fun Failed Graphs</a></h1>
+							<p>Because Sometimes My Code Doesn't Work</p>
 						</div>
 					</div>
 				</header>
