--- a/funstuff/paintings.html
+++ b/funstuff/paintings.html
@@ -18,8 +18,8 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<h1><a href="index.html" id="logo">Paintings</a></h1>
+							<p>And Other Artwork I've Created</p>
 						</div>
 					</div>
 				</header>
