--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@
 														</article>
 													</li>
 												</ul>
-												<a href="#" class="button alt">Archives</a>
+												<!-- <a href="#" class="button alt">Archives</a> -->
 											</section>
 
 										<!-- Something -->
