Reorder sidebar on blog page

--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
 											</section>
 
 										<!-- Something -->
-											<section>
+											<!-- <section>
 												<h2 class="major"><span>Magna Feugiat</span></h2>
 												<p>
 													Rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
@@ -114,7 +114,7 @@
 													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
 												</p>
 												<a href="#" class="button alt">Learn more</a>
-											</section>
+											</section> -->
 
 								</div>
 							</div>
