--- a/blog.html
+++ b/blog.html
@@ -59,6 +59,17 @@
 
 									<!-- Sidebar -->
 
+										<!-- Something -->
+										<section>
+											<h2 class="major"><span>Mapping Sea Surface Chlorophyll in Python</span></h2>
+											<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+											<p>
+												Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
+												Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
+											</p>
+											<a href="#" class="button alt">Learn more</a>
+										</section>
+
 										<!-- Recent Posts -->
 											<section>
 												<h2 class="major"><span>Recent Posts</span></h2>
@@ -94,16 +105,7 @@
 												<!-- <a href="#" class="button alt">Archives</a> -->
 											</section>
 
-										<!-- Something -->
-											<section>
-												<h2 class="major"><span>Ipsum Dolore</span></h2>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<p>
-													Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
-												</p>
-												<a href="#" class="button alt">Learn more</a>
-											</section>
+										
 
 										<!-- Something -->
 											<!-- <section>
@@ -126,69 +128,48 @@
 										<article class="box page-content">
 
 											<header>
-												<h2>Left Sidebar</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+												<h2>An Introduction to Ocean Data</h2>
+												<p>And the wonderful field of oceanography</p>
 												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
+													<li class="icon fa-clock">March 26, 2021</li>
+													<!-- <li class="icon fa-comments"><a href="#">1,024</a></li> -->
 												</ul>
 											</header>
 
 											<section>
 												<span class="image featured"><img src="images/pic05.jpg" alt="" /></span>
 												<p>
-													Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam lorem ipsum dolor sit amet nullam.
+													What is oceanography, and why would an oceanographer need to learn how to code? 
+																	Oceanographers study the Earth's oceans through the lenses of four main disciplines: 
+																	biology, chemistry, geology, and physics. The oceans cover over 70% of the Earth's surface, 
+																	which naturally means that oceanographers have to gather vast collections of data to make 
+																	meaningful discoveries. 
+												</p>
+
+												<p>
+													In fact, we're collecting so much data that we're 
+																	struggling to efficiently analyze all of it with current methods. This becomes more true 
+																	with every additional scientific satellite, float, and autonomous vehicle we deploy. 
+																	Many programmers and oceanographers alike are tackling 
+																	this problem by working towards innovative solutions in data science to allow researchers 
+																	to make full use of their ever-expanding datasets. 
 												</p>
 											</section>
 
 											<section>
-												<h3>More intriguing information</h3>
+												<h3>Subheading...</h3>
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.
-												</p>
-												<p>
-													Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-													quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
+													More information
 												</p>
 											</section>
 
 											<section>
-												<h3>So in conclusion ...</h3>
+												<h3>Conclusion</h3>
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae.
+													Don't you feel like you learned something?
 												</p>
 												<p>
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
+													If you want to read more of my writing, you can find my full posts on [Medium](https://deryagumustel.medium.com/).
 												</p>
 											</section>
 
