--- a/blog.html
+++ b/blog.html
@@ -181,12 +181,13 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
+										<h2 class="major"><span></span></h2>
 										<div>
 											<div class="row">
+												<!-- 
 												<div class="col-3 col-6-medium col-12-small">
 
-													<!-- Feature -->
+													Feature
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 															<h3><a href="#">A Subheading</a></h3>
@@ -199,7 +200,7 @@
 												</div>
 												<div class="col-3 col-6-medium col-12-small">
 
-													<!-- Feature -->
+													Feature
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 															<h3><a href="#">Another Subheading</a></h3>
@@ -212,7 +213,7 @@
 												</div>
 												<div class="col-3 col-6-medium col-12-small">
 
-													<!-- Feature -->
+													Feature
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 															<h3><a href="#">And Another</a></h3>
@@ -225,7 +226,7 @@
 												</div>
 												<div class="col-3 col-6-medium col-12-small">
 
-													<!-- Feature -->
+													Feature
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 															<h3><a href="#">And One More</a></h3>
@@ -235,7 +236,7 @@
 															</p>
 														</section>
 
-												</div>
+												</div>-->
 												<div class="col-12">
 													<ul class="actions">
 														<li><a href="https://medium.com/@deryagumustel" class="button large">Medium</a></li>
@@ -245,7 +246,7 @@
 												</div>
 											</div>
 										</div>
-									</section>
+									</section> 
 
 							</div>
 						</div>
