Update recent posts section on blog page

--- a/blog.html
+++ b/blog.html
@@ -61,18 +61,19 @@
 
 										<!-- Something -->
 										<section>
-											<h2 class="major"><span>Mapping Sea Surface Chlorophyll in Python</span></h2>
-											<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+											<h2 class="major"><span>Recent Posts</span></h2>
+											<h2 class="major"><span>Map Sea Surface Chlorophyll in Python</span></h2>
+											<a href="https://medium.com/geospatial-analytics/mapping-sea-surface-chlorophyll-in-python-35bf1e8a7eeb?source=friends_link&sk=fa2a8581b8c53ba311e472c2c9996d58" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 											<p>
-												Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-												Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
+												A Python tutorial for mapping sea surface chlorophyll in Python using satellite imagery 
+												from the NASA MODIS-Aqua satellite and the xarray Python package. Code hosted on 
+												<a href="https://github.com/dgumustel/blog_visualizations/blob/main/chlorophyll/modis-chlorophyll.ipynb">GitHub</a>.
 											</p>
-											<a href="#" class="button alt">Learn more</a>
 										</section>
 
 										<!-- Recent Posts -->
 											<section>
-												<h2 class="major"><span>Recent Posts</span></h2>
+												<!-- <h2 class="major"><span>Recent Posts</span></h2> -->
 												<ul class="divided">
 													<li>
 														<article class="box post-summary">
@@ -104,6 +105,8 @@
 												</ul>
 												<!-- <a href="#" class="button alt">Archives</a> -->
 											</section>
+
+											<a href="https://deryagumustel.medium.com/" class="button alt">Read more</a>
 
 										
 
@@ -169,7 +172,8 @@
 													Don't you feel like you learned something?
 												</p>
 												<p>
-													If you want to read more of my writing, you can find my full posts on [Medium](https://deryagumustel.medium.com/).
+													If you want to read more of my writing, you can find my full posts on 
+													<a href="https://deryagumustel.medium.com/">Medium</a>.
 												</p>
 											</section>
 
