--- a/blog.html
+++ b/blog.html
@@ -65,28 +65,28 @@
 												<ul class="divided">
 													<li>
 														<article class="box post-summary">
-															<h3><a href="#">A Subheading</a></h3>
+															<h3><a href="https://medium.com/geekculture/classifying-coastal-upwelling-using-environmental-variables-8e648d909170?source=friends_link&sk=a0dd4c63f23ac656df05deb6a3df1990">Classifying Coastal Upwelling Using Environmental Variables</a></h3>
 															<ul class="meta">
-																<li class="icon fa-clock">6 hours ago</li>
-																<li class="icon fa-comments"><a href="#">34</a></li>
+																<li class="icon fa-clock">May 24, 2021</li>
+																<li class="icon fa-comments"><a href="https://medium.com/geekculture/classifying-coastal-upwelling-using-environmental-variables-8e648d909170?source=friends_link&sk=a0dd4c63f23ac656df05deb6a3df1990">Published in Geek Culture</a></li>
 															</ul>
 														</article>
 													</li>
 													<li>
 														<article class="box post-summary">
-															<h3><a href="#">Another Subheading</a></h3>
+															<h3><a href="https://medium.com/geekculture/data-shows-how-coastal-upwelling-affects-sea-surface-temperature-in-oregon-30761986eec9?source=friends_link&sk=53283633bf18e913c719d4cab1af14d9">Coastal Upwelling Affects Sea Surface Temperature in Oregon</a></h3>
 															<ul class="meta">
-																<li class="icon fa-clock">9 hours ago</li>
-																<li class="icon fa-comments"><a href="#">27</a></li>
+																<li class="icon fa-clock">June 9, 2021</li>
+																<li class="icon fa-comments"><a href="https://medium.com/geekculture/data-shows-how-coastal-upwelling-affects-sea-surface-temperature-in-oregon-30761986eec9?source=friends_link&sk=53283633bf18e913c719d4cab1af14d9">Published in Geek Culture</a></li>
 															</ul>
 														</article>
 													</li>
 													<li>
 														<article class="box post-summary">
-															<h3><a href="#">And Another</a></h3>
+															<h3><a href="https://deryagumustel.medium.com/domain-knowledge-an-essential-first-step-to-data-analysis-projects-7c6f1a73b5?source=friends_link&sk=aaed88fdba89e139fd7c739b0889b7e1">Domain Knowledge: An Essential First Step to Data Analysis Projects</a></h3>
 															<ul class="meta">
-																<li class="icon fa-clock">Yesterday</li>
-																<li class="icon fa-comments"><a href="#">184</a></li>
+																<li class="icon fa-clock">March 12, 2021</li>
+																<!-- <li class="icon fa-comments"><a href="#">184</a></li> -->
 															</ul>
 														</article>
 													</li>
