--- a/blog.html
+++ b/blog.html
@@ -92,6 +92,8 @@
 													</li>
 												</ul>
 												<!-- <a href="#" class="button alt">Archives</a> -->
+
+												<a href="https://medium.com/@deryagumustel" class="button alt">Medium</a>
 											</section>
 
 
