Add content to about page

--- a/about.html
+++ b/about.html
@@ -68,30 +68,65 @@
 
 											<section>
 												<span class="image featured"><img src="images/pic05.jpg" alt="" /></span>
+												<h3>Background</h3>
 												<p>Born and raised in the Pacific Northwest, I've always loved the evergreen Cascades and overcast Pacific beaches. 
 													After earning my bachelor's degree in oceanography from the University of Washington in 2020, I earned my certificate 
 													in data science through an immersive program from General Assembly in 2021.</p>
-											</section>
 
-											<section>
-												<h3>More intriguing information</h3>
+												<p>I care a lot about the environment, but ultimately the most important thing to me is people - 
+													the people I live with, the people I work with, and the communities I give back to. I love to learn, 
+													I love to help others learn, and I'm always looking for ways to contribute more to the oceanography and 
+													data science communities!</p>
+
 												<p>I'm currently building a career for myself at the intersection of oceanography and data science, leading me to 
 													join an ocean acoustics team at the University of Washington to conduct multi-year analysis of OOI data and 
 													help develop open-access tools to make sonar data more accessible to the public.</p>
 											</section>
 
 											<section>
-												<h3>So in conclusion ...</h3>
-												<p>I care a lot about the environment, but ultimately the most important thing to me is people - 
-													the people I live with, the people I work with, and the communities I give back to. I love to learn, 
-													I love to help others learn, and I'm always looking for ways to contribute more to the oceanography and 
-													data science communities!</p>
+												<h3>Work Experience</h3>
+												<p>
+													Sorted most recent to oldest
+													<ul>
+														<li>Research assistant @ University of Washington Applied Physics Lab</li>
+														<li>Data analyst</li>
+														<li>Teaching assistant</li>
+														<li>Student coordinator</li>
+													</ul>
+
+													Add link to my resume
+												</p>
+											</section>
+
+											<section>
+												<h3>Interests</h3>
+												<p>
+													Reading, painting, piano, walks, ecology, game development, writing, science communication 
+													- can sort these into personal interests and career interests
+												</p>
 											</section>
 
 											<section>
 												<h3>What I'm up to</h3>
 												<p>
-													Keep lists of what I'm reading, watching, listening to, etc.
+													What I'm reading:
+													<ul>
+														<li>The Power of Small</li>
+														<li>Martin Marten</li>
+													</ul>
+
+													Future project ideas:
+													<ul>
+														<li>Wordle bot - a bot that lives on Twitter and solves the daily Wordle</li>
+														<li>Project Wild - a video game about wildlife conservation</li>
+													</ul>
+
+													My favorite productivity tools:
+													<ul>
+														<li>Focusmate</li>
+														<li>Notion</li>
+														<li>Passion Planner</li>
+													</ul>
 												</p>
 											</section>
 
@@ -148,8 +183,8 @@
 									<section>
 										<h2 class="major"><span>Get in touch</span></h2>
 										<p>
-											TODO: Put a blurb here about how to get in touch with me if folks are interested in working with me or 
-											have opportunities they want to share.
+											I'd love to hear from you! Connect with me on <a href="https://www.linkedin.com/in/derya-gumustel/">LinkedIn</a> or shoot me an email at degumustel@gmail.com if you're interested in 
+											chatting or working together!
 										</p>
 										<ul class="contact">
 											<!-- <li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
