Add some project ideas to about page

--- a/about.html
+++ b/about.html
@@ -109,6 +109,8 @@
 											<section>
 												<h3>What I'm up to</h3>
 												<p>
+													Here's some of how I'm spending my free-time these days! 
+
 													What I'm reading:
 													<ul>
 														<li>The Power of Small</li>
@@ -118,7 +120,24 @@
 													Future project ideas:
 													<ul>
 														<li>Wordle bot - a bot that lives on Twitter and solves the daily Wordle</li>
-														<li>Project Wild - a video game about wildlife conservation</li>
+															<li>Set the bot up to start with a random common 5-letter word each day and the prioritize 
+																words based on letters. Could also set it up to use different approaches! For example, 
+																use the same word instead of a random one as a starting point, or try the challenge of 
+																guessing 5 different words with no shared letters and then see if it can guess correctly! 
+																Would be a lot of fun to deploy this on my site so people can interact with it. I could 
+																potentially set it up so that users can give it a word and see how many guesses it takes. 
+																Don't forget to run tests and see what words it fails at! There's a great looking tutorial 
+																on <a href="https://betterprogramming.pub/building-a-wordle-bot-in-under-100-lines-of-python-9b980539defb">Medium</a> 
+																worth checking out. I want to deploy it on Twitter, but it'd be fun to deploy it as an 
+																interactive app on my website too. Could I even set it up so that players can play side-by-side 
+																and "race" it to the correct answer? 
+															</li>
+														<li>Project Wild - a video game about wildlife conservation - I have so much to say about this one!!!</li>
+														<li>I'd also love to do some sports projects! The statistical analysis in baseball and football is out 
+															of this world. I've never been a big sports fan but have found some interest in it lately and it would 
+															be a blast to recruit some of my friends that love sports to help me with some statistical analysis or 
+															modeling project - baseball season has already started so maybe I'll start with that! 
+														</li>
 													</ul>
 
 													My favorite productivity tools:
